--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,14 @@
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
+    <!-- ==== Google Fonts Links ====-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
+
+
 </head>
 
 <body>
@@ -56,117 +64,207 @@
             <br><br>
         </p>
     </div>
-
     <div class="form-container">
         <form action="#">
             <div class="user-details">
-                <div class="colum">
-                <div class="input-box">
-                    <span class="details">Title</span>
-                    <span class="req-star">*</span>
-                    <select name="titles" id="titles">
-                        <option value="Mr.">Mr.</option>
-                        <option value="Miss.">Miss.</option>
-                    </select>
-                </div>
-                <div class="input-box">
-                    <span class="details">Full Name</span>
-                    <span class="req-star">*</span>
-                    <input type="text" required>
-                </div>
-            </div>
-                <div class="input-box">
-                    <span class="details">Email</span>
-                    <span class="req-star">*</span>
-                    <input type="text" required>
-                </div>
-                <div>
-                    <span class="details">Country</span>
-                    <span class="req-star">*</span>
-                    <select id="country" name="country" class="form-control">
-                        <option value="GB">United Kingdom</option>
-                        <option value="AL">Albania</option>
-                        <option value="AD">Andorra</option>
-                        <option value="AT">Austria</option>
-                        <option value="BY">Belarus</option>
-                        <option value="BE">Belgium</option>
-                        <option value="BA">Bosnia and Herzegovina</option>
-                        <option value="BG">Bulgaria</option>
-                        <option value="HR">Croatia (Hrvatska)</option>
-                        <option value="CY">Cyprus</option>
-                        <option value="CZ">Czech Republic</option>
-                        <option value="FR">France</option>
-                        <option value="GI">Gibraltar</option>
-                        <option value="DE">Germany</option>
-                        <option value="GR">Greece</option>
-                        <option value="VA">Holy See (Vatican City State)</option>
-                        <option value="HU">Hungary</option>
-                        <option value="IT">Italy</option>
-                        <option value="LI">Liechtenstein</option>
-                        <option value="LU">Luxembourg</option>
-                        <option value="MK">Macedonia</option>
-                        <option value="MT">Malta</option>
-                        <option value="MD">Moldova</option>
-                        <option value="MC">Monaco</option>
-                        <option value="ME">Montenegro</option>
-                        <option value="NL">Netherlands</option>
-                        <option value="PL">Poland</option>
-                        <option value="PT">Portugal</option>
-                        <option value="RO">Romania</option>
-                        <option value="SM">San Marino</option>
-                        <option value="RS">Serbia</option>
-                        <option value="SK">Slovakia</option>
-                        <option value="SI">Slovenia</option>
-                        <option value="ES">Spain</option>
-                        <option value="UA">Ukraine</option>
-                        <option value="DK">Denmark</option>
-                        <option value="EE">Estonia</option>
-                        <option value="FO">Faroe Islands</option>
-                        <option value="FI">Finland</option>
-                        <option value="GL">Greenland</option>
-                        <option value="IS">Iceland</option>
-                        <option value="IE">Ireland</option>
-                        <option value="LV">Latvia</option>
-                        <option value="LT">Lithuania</option>
-                        <option value="NO">Norway</option>
-                        <option value="SJ">Svalbard and Jan Mayen Islands</option>
-                        <option value="SE">Sweden</option>
-                        <option value="CH">Switzerland</option>
-                        <option value="TR">Turkey</option>
-                    </select>
-                </div>
-                <div class="input-box">
-                    <span class="details">City</span>
-                    <span class="req-star">*</span>
-                    <input type="text" required>
-                </div>
-                <div class="colum">
+                <div class="grid-item item1">
                     <div class="input-box">
-                        <span class="details">Phone</span>
+                        <span class="details">Title</span>
+                        <span class="req-star">*</span><br>
+                        <select name="titles" id="titles">
+                            <option value="Mr.">Mr.</option>
+                            <option value="Miss.">Miss.</option>
+                        </select>
+                    </div>
+                    <div class="input-box box-2">
+                        <span class="details">Full Name</span>
+                        <span class="req-star">*</span>
+                        <input type="text" placeholder="Enter your full name" required>
+                    </div>
+                </div>
+                <div class="grid-item item2">
+                    <div class="input-box box-1">
+                        <span class="details">Email</span>
+                        <span class="req-star">*</span>
+                        <input type="text" placeholder="Enter your email" required>
+                    </div>
+                    <div class="input-box box">
+                        <span class="details">Country</span>
+                        <span class="req-star">*</span><br>
+                        <select id="country" name="country" class="form-control">
+                            <option value="GB">United Kingdom</option>
+                            <option value="AL">Albania</option>
+                            <option value="AD">Andorra</option>
+                            <option value="AT">Austria</option>
+                            <option value="BY">Belarus</option>
+                            <option value="BE">Belgium</option>
+                            <option value="BA">Bosnia and Herzegovina</option>
+                            <option value="BG">Bulgaria</option>
+                            <option value="HR">Croatia (Hrvatska)</option>
+                            <option value="CY">Cyprus</option>
+                            <option value="CZ">Czech Republic</option>
+                            <option value="FR">France</option>
+                            <option value="GI">Gibraltar</option>
+                            <option value="DE">Germany</option>
+                            <option value="GR">Greece</option>
+                            <option value="VA">Holy See (Vatican City State)</option>
+                            <option value="HU">Hungary</option>
+                            <option value="IT">Italy</option>
+                            <option value="LI">Liechtenstein</option>
+                            <option value="LU">Luxembourg</option>
+                            <option value="MK">Macedonia</option>
+                            <option value="MT">Malta</option>
+                            <option value="MD">Moldova</option>
+                            <option value="MC">Monaco</option>
+                            <option value="ME">Montenegro</option>
+                            <option value="NL">Netherlands</option>
+                            <option value="PL">Poland</option>
+                            <option value="PT">Portugal</option>
+                            <option value="RO">Romania</option>
+                            <option value="SM">San Marino</option>
+                            <option value="RS">Serbia</option>
+                            <option value="SK">Slovakia</option>
+                            <option value="SI">Slovenia</option>
+                            <option value="ES">Spain</option>
+                            <option value="UA">Ukraine</option>
+                            <option value="DK">Denmark</option>
+                            <option value="EE">Estonia</option>
+                            <option value="FO">Faroe Islands</option>
+                            <option value="FI">Finland</option>
+                            <option value="GL">Greenland</option>
+                            <option value="IS">Iceland</option>
+                            <option value="IE">Ireland</option>
+                            <option value="LV">Latvia</option>
+                            <option value="LT">Lithuania</option>
+                            <option value="NO">Norway</option>
+                            <option value="SJ">Svalbard and Jan Mayen Islands</option>
+                            <option value="SE">Sweden</option>
+                            <option value="CH">Switzerland</option>
+                            <option value="TR">Turkey</option>
+                        </select>
+                    </div>
+                    <div class="input-box box-3">
+                        <span class="details">City</span>
                         <span class="req-star">*</span>
                         <input type="text" required>
                     </div>
-                    <div>
+                </div>
+                <div class="grid-item item3">
+                    <div class="input-box box-1">
+                        <span class="details">Phone</span>
+                        <span class="req-star">*</span>
+                        <input type="text" placeholder="Enter your number" required>
+                    </div>
+                    <div class="box-2">
                         <span class="details">Is this Phone Number available on?<br>
-                            <input type="checkbox">Whatsapp
-                            <input type="checkbox">Viber
-                            <input type="checkbox">Telegram
+                            <label class="opt"><input type="checkbox">&nbsp;Whatsapp
+                                <span class="checkmark"></span>
+                            </label>
+                            <label class="opt"><input type="checkbox">&nbsp;Viber
+                                <span class="checkmark"></span>
+                            </label>
+                            <label class="opt"><input type="checkbox">&nbsp;Telegram
+                                <span class="checkmark"></span>
+                            </label>
                         </span>
                     </div>
                 </div>
-                <div class="input-box">
-                    <span class="details">Subject</span>
-                    <span class="req-star">*</span>
-                    <input type="text" required>
+                <div class="grid-item item4">
+                    <div class="input-box box-1">
+                        <span class="details">Subject</span>
+                        <span class="req-star">*</span>
+                        <input type="text" required>
+                    </div>
+                    <div class="input-box box-2">
+                        <span class="details">Your Budget(Approximately in your preferred currency)</span>
+                        <span class="req-star">*</span>
+                        <input type="text" required>
+                    </div>
                 </div>
-                <div class="input-box">
-                    <span class="details">Your Budget(Approximately in your preferred currency)</span>
-                    <span class="req-star">*</span>
-                    <input type="text" required>
+                <div class="grid-item item5">
+                    <div class="input-box box-1">
+                        <textarea name="message" placeholder="Your Message" class="message"></textarea>
+                    </div>
                 </div>
+            </div>
+            <div class="btn-container">
                 <button class="submit-btn" type="submit">Submit</button>
             </div>
         </form>
+    </div>
+    
+    <!--===Footer Section Start===-->
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="footer-col">
+                    <h2>Our Specialties</h2>
+                    <ul>
+                        <li><a href="#"> We sell Fresh stones only (unused).</a></li>
+                        <hr>
+                        <li><a href="#"> We send goods with 100% insurance.</a></li>
+                        <hr>
+                        <li><a href="#"> All Gemstones are Worldwide shipped by Free of Charges.</a></li>
+                        <hr>
+                        <li><a href="#"> We courier your purchased item(s) at your address within 24 hours.</a></li>
+                        <hr>
+                        <li><a href="#"> Our sales department keeps in touch with you after your purchase until reaching
+                                goods at your home.</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h2>Precious Gemstones</h2>
+                    <ul>
+                        <li><a href="#">Blue Sapphire</a></li>
+                        <hr>
+                        <li><a href="#">Ruby</a></li>
+                        <hr>
+                        <li><a href="#">Yellow Sapphire</a></li>
+                        <hr>
+                        <li><a href="#">Pink Sapphire</a></li>
+                        <hr>
+                        <li><a href="#">White Sapphire</a></li>
+                        <hr>
+                        <li><a href="#">Padparadscha</a></li>
+                        <hr>
+                        <li><a href="#">Star Sapphire</a></li>
+                        <hr>
+                        <li><a href="#">Purple Sapphire</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h2>Semi Precious Gemstones</h2>
+                    <ul>
+                        <li><a href="#">Garnet</a></li>
+                        <hr>
+                        <li><a href="#">Tourmaline</a></li>
+                        <hr>
+                        <li><a href="#">Chrysoberyl</a></li>
+                        <hr>
+                        <li><a href="#">Aqamarine</a></li>
+                        <hr>
+                        <li><a href="#">Topaz</a></li>
+                        <hr>
+                        <li><a href="#">Spinel</a></li>
+                        <hr>
+                        <li><a href="#">Amethyst</a></li>
+                        <hr>
+                        <li><a href="#">Moonstone</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <div class="gia-img">
+                        <img src="/Web_Application_Final-_Project_Group-R/Images/cc1.png" alt="">
+                        <p>We Provide NGJA Authorized Certificate with All Our Gemstones.
+                            www.gemsinsrilanka.com Manage by ROYAL GEMSTONE PARADICE (PVT) LTD – Since 2024.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!--===Footer Section End===-->
+    <div class="copyright-text">
+        <p>Copyright 2024 &copy; ROYAL GEMSTONE PARADICE (PVT) LTD</p>
     </div>
 </body>
 
