--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
+    <!-- ==== Google Fonts Links ====-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
+
+
 </head>
 
 <body>
@@ -63,7 +70,6 @@
                 <i class='bx bx-certification'></i>
                 <p>25 Years of Trust<br>100% Guarantee</p>
             </div>
-
             <div class="feature-items">
                 <i class='bx bxs-truck'></i>
                 <p>Worldwide<br>Shipping</p>
@@ -74,12 +80,12 @@
             </div>
             <div class="feature-items">
                 <i class='bx bxl-sketch'></i>
-                <p>GIA Certified<br>Gemstones</p>
+                <p>NJGA Certified<br>Gemstones</p>
             </div>
         </div>
     </section>
 
-    <!--Home 3nd Section-->
+    <!--Home 3rd Section-->
     <section class="section3">
         <h3>BUY CEYLON SAPPHIRES ONLINE</h3>
         <p>Buy Sri Lanka Sapphires Online? Sri Lanka has been producing fine sapphire for centuries, and many of the
@@ -92,7 +98,7 @@
             </div>
             <div class="gemstone-item">
                 <img src="Images/ruby.png" alt="Ruby">
-                <p>Ruby</p>
+                <p>RUBY</p>
             </div>
             <div class="gemstone-item">
                 <img src="Images/YELLOW SAPPHIRE.jpg" alt="Yellow Sapphire">
@@ -121,12 +127,138 @@
         </div>
     </section>
 
+    <!--Home 4th Section (Review Section)-->
+    <section class="section4">
+        <div class="review">
+            <h1 class="heading">customer's <span>review</span></h1>
+
+            <div class="box-container">
+                <div class="box">
+                    <img src="images/quote-img.png" alt="" class="quote" />
+                    <p>Hi, I received my Blue Sapphire and Emerald rings and I was shocked.it were so beautiful beyond my expectation. Their beauty and sparkle is really amazing. honesty, depth of knowledge and perhaps the best quality of Gemstones available at Gems in Sri Lanka</p>
+                    <img src="Images\avatar_1.png" class="user" alt="" />
+                    <h3>Priyanka Chopra<h3>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="images/quote-img.png" alt="" class="quote" />
+                    <p>It was a very great experience for me visiting Gems in Sri Lanka These guys provide us
+                        best quality certified gem stones Staff is very polite, thanks to you and specially</p>
+                    <img src="Images\avatar_2.png" class="user" alt="" />
+                    <h3>Suresh Krishna</h3>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="images/quote-img.png" alt="" class="quote"/>
+                    <p>Awesome collections. Perfect place to by Blue Sapphire in Sri Lanka. Good quality natural gems available, good service and decent price. Thank you. Much appreciated.</p>
+                    <img src="Images\avatar_3.png" alt="user" class="user"/>
+                    <h3>Alexander </h3>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--Home 5th Section-->
+    <section class="section5">
+
+    </section>
 
 
 
-    <footer>
 
+    <!--===Footer Section Start===-->
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="footer-col">
+                    <h2>Our Specialties</h2>
+                    <ul>
+                        <li><a href="#"> We sell Fresh stones only (unused).</a></li>
+                        <hr>
+                        <li><a href="#"> We send goods with 100% insurance.</a></li>
+                        <hr>
+                        <li><a href="#"> All Gemstones are Worldwide shipped by Free of Charges.</a></li>
+                        <hr>
+                        <li><a href="#"> We courier your purchased item(s) at your address within 24 hours.</a></li>
+                        <hr>
+                        <li><a href="#"> Our sales department keeps in touch with you after your purchase until reaching
+                                goods at your home.</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h2>Precious Gemstones</h2>
+                    <ul>
+                        <li><a href="#">Blue Sapphire</a></li>
+                        <hr>
+                        <li><a href="#">Ruby</a></li>
+                        <hr>
+                        <li><a href="#">Yellow Sapphire</a></li>
+                        <hr>
+                        <li><a href="#">Pink Sapphire</a></li>
+                        <hr>
+                        <li><a href="#">White Sapphire</a></li>
+                        <hr>
+                        <li><a href="#">Padparadscha</a></li>
+                        <hr>
+                        <li><a href="#">Star Sapphire</a></li>
+                        <hr>
+                        <li><a href="#">Purple Sapphire</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h2>Semi Precious Gemstones</h2>
+                    <ul>
+                        <li><a href="#">Garnet</a></li>
+                        <hr>
+                        <li><a href="#">Tourmaline</a></li>
+                        <hr>
+                        <li><a href="#">Chrysoberyl</a></li>
+                        <hr>
+                        <li><a href="#">Aqamarine</a></li>
+                        <hr>
+                        <li><a href="#">Topaz</a></li>
+                        <hr>
+                        <li><a href="#">Spinel</a></li>
+                        <hr>
+                        <li><a href="#">Amethyst</a></li>
+                        <hr>
+                        <li><a href="#">Moonstone</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <div class="gia-img">
+                        <img src="/Web_Application_Final-_Project_Group-R/Images/cc1.png" alt="">
+                        <p>We Provide NGJA Authorized Certificate with All Our Gemstones.
+                            www.gemsinsrilanka.com Manage by ROYAL GEMSTONE PARADICE (PVT) LTD – Since 2024.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
+    <!--===Footer Section End===-->
+    <div class="copyright-text">
+        <p>Copyright 2024 &copy; ROYAL GEMSTONE PARADICE (PVT) LTD</p>
+    </div>
+
     <script src="script.js"></script>
 </body>
 
