--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
-
-
 </head>
 
 <body>
@@ -91,38 +89,54 @@
         <p>Buy Sri Lanka Sapphires Online? Sri Lanka has been producing fine sapphire for centuries, and many of the
             world’s most famous sapphires were found there.
             Buy certified 100% natural Precious Stones online at cheap & wholesale price from Sri Lanka.</p>
+
         <div class="gemstone-container">
             <div class="gemstone-item">
-                <img src="Images/BLUE SAPPHIRE.png" alt="Blue Sapphire">
-                <p>BLUE SAPPHIRE</p>
+                <a href="#"><img src="Images/BLUE SAPPHIRE-2.jpg" alt="Blue Sapphire"></a>
+                <h5><a href="#">Precious Gemstones</a></h5>
+                <a href="#"><h3>BLUE SAPPHIRE</h3></a>
             </div>
+
             <div class="gemstone-item">
-                <img src="Images/ruby.png" alt="Ruby">
-                <p>RUBY</p>
+                <a href="#"><img src="Images/ruby-3.jpg" alt="Ruby"></a>
+                <h5><a href="#">Precious Gemstones</a></h5>
+                <a href="#"><h3>RUBY</h3></a>
             </div>
+
             <div class="gemstone-item">
-                <img src="Images/YELLOW SAPPHIRE.jpg" alt="Yellow Sapphire">
-                <p>YELLOW SAPPHIRE</p>
+                <a href="#"><img src="Images/YELLOW SAPPHIRE-1.jpg" alt="Yellow Sapphire"></a>
+                <h5><a href="#">Precious Gemstones</a></h5>
+                <a href="#"><h3>YELLOW SAPPHIRE</h3></a>
             </div>
+
             <div class="gemstone-item">
-                <img src="Images/PINK SAPPHIRE.jpg" alt="Pink Sapphire">
-                <p>PINK SAPPHIRE</p>
+                <a href="#"><img src="Images/PINK SAPPHIRE-3.jpg" alt="Pink Sapphire"></a>
+                <h5><a href="#">Precious Gemstones</a></h5>
+                <a href="#"><h3>PINK SAPPHIRE</h3></a>
             </div>
+
             <div class="gemstone-item">
-                <img src="Images/WHITE SAPPHIRE.jpg" alt="White Sapphire">
-                <p>WHITE SAPPHIRE</p>
+                <a href="#"><img src="Images/WHITE SAPPHIRE-2.jpg" alt="White Sapphire"></a>
+                <h5><a href="#">Precious Gemstones</a></h5>
+                <a href="#"><h3>WHITE SAPPHIRE</h3></a>
             </div>
+
             <div class="gemstone-item">
-                <img src="Images/PADPARADSCHA.jpg" alt="PADPARADSCHA">
-                <p>PADPARADSCHA</p>
+                <a href="#"><img src="Images/PADPARADSCHA-1.jpg" alt="PADPARADSCHA"></a>
+                <h5><a href="#">Precious Gemstones</a></h5>
+                <a href="#"><h3>PADPARADSCHA</h3></a>
             </div>
+
             <div class="gemstone-item">
-                <img src="Images/BLUE SAPPHIRE.png" alt="Blue Sapphire">
-                <p>BLUE SAPPHIRE</p>
+                <a href="#"><img src="Images/STAR SAPPHIRE.jpg" alt="Blue Sapphire"></a>
+                <h5><a href="#">Precious Gemstones</a></h5>
+                <a href="#"><h3>Star Sapphire</h3></a>
             </div>
+
             <div class="gemstone-item">
-                <img src="Images/BLUE SAPPHIRE.png" alt="Blue Sapphire">
-                <p>BLUE SAPPHIRE</p>
+                <a href="#"><img src="Images/Purple Sapphire-1.jpg" alt="Blue Sapphire"></a>
+                <h5><a href="#">Precious Gemstones</a></h5>
+                <a href="#"><h3>Purple Sapphire</h3></a>
             </div>
         </div>
     </section>
@@ -135,9 +149,25 @@
             <div class="box-container">
                 <div class="box">
                     <img src="images/quote-img.png" alt="" class="quote" />
-                    <p>Hi, I received my Blue Sapphire and Emerald rings and I was shocked.it were so beautiful beyond my expectation. Their beauty and sparkle is really amazing. honesty, depth of knowledge and perhaps the best quality of Gemstones available at Gems in Sri Lanka</p>
+                    <p>Hi, I received my Blue Sapphire and Emerald rings and I was shocked.it were so beautiful beyond
+                        my expectation. Their beauty and sparkle is really amazing. honesty, depth of knowledge and
+                        perhaps the best quality of Gemstones available at Gems in Sri Lanka</p>
                     <img src="Images\avatar_1.png" class="user" alt="" />
                     <h3>Priyanka Chopra<h3>
+                            <div class="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                </div>
+                <div class="box">
+                    <img src="images/quote-img.png" alt="" class="quote" />
+                    <p>It was a very great experience for me visiting Gems in Sri Lanka These guys provide us
+                        best quality certified gem stones Staff is very polite, thanks to you and specially</p>
+                    <img src="Images/avatar_4.jpg" class="user" alt="" />
+                    <h3>Rashmika Mandana</h3>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -148,23 +178,10 @@
                 </div>
                 <div class="box">
                     <img src="images/quote-img.png" alt="" class="quote" />
-                    <p>It was a very great experience for me visiting Gems in Sri Lanka These guys provide us
-                        best quality certified gem stones Staff is very polite, thanks to you and specially</p>
-                    <img src="Images\avatar_2.png" class="user" alt="" />
-                    <h3>Suresh Krishna</h3>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
-                    </div>
-                </div>
-                <div class="box">
-                    <img src="images/quote-img.png" alt="" class="quote"/>
-                    <p>Awesome collections. Perfect place to by Blue Sapphire in Sri Lanka. Good quality natural gems available, good service and decent price. Thank you. Much appreciated.</p>
-                    <img src="Images\avatar_3.png" alt="user" class="user"/>
-                    <h3>Alexander </h3>
+                    <p>Awesome collections. Perfect place to by Blue Sapphire in Sri Lanka. Good quality natural gems
+                        available, good service and decent price. Thank you. Much appreciated.</p>
+                    <img src="Images\avatar_4.png" alt="user" class="user" />
+                    <h3>Sunny Leone</h3>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -178,12 +195,62 @@
     </section>
 
     <!--Home 5th Section-->
-    <section class="section5">
+    <section class="section3">
+        <h3>BUY SEMI PRECIOUS GEMSTONE ONLINE</h3>
+        <p>Buy Beautiful semi-precious stones Aquamarine, Garnet, Tourmaline, Chrysoberyl, Spinel, Topaz, Moonstone, Amethyst online at royalgemstones.com</p>
 
+        <div class="gemstone-container">
+            <div class="gemstone-item">
+                <img src="Images/Garnet.png" alt="Blue Sapphire">
+                <h5><a href="#">Semi Precious Gemstones</a></h5>
+                <a href="#"><h3>Garnet</h3></a>
+            </div>
+
+            <div class="gemstone-item">
+                <img src="Images/Tourmaline.jpg" alt="Ruby">
+                <h5><a href="#">Semi Precious Gemstones</a></h5>
+                <a href="#"><h3>Tourmaline</h3></a>
+            </div>
+
+            <div class="gemstone-item">
+                <img src="Images/Chrysoberyl.jpg" alt="Blue Sapphire">
+                <h5><a href="#">Semi Precious Gemstones</a></h5>
+                <a href="#"><h3>Chrysoberyl</h3></a>
+            </div>
+
+            <div class="gemstone-item">
+                <img src="Images/Aquamarine.jpg" alt="Yellow Sapphire">
+                <h5><a href="#">Semi Precious Gemstones</a></h5>
+                <a href="#"><h3>Aqamarine</h3></a>
+            </div>
+
+            <div class="gemstone-item">
+                <img src="Images/Topaz.jpg" alt="Pink Sapphire">
+                <h5><a href="#">Semi Precious Gemstones</a></h5>
+                <a href="#"><h3>Topaz</h3></a>
+            </div>
+
+            <div class="gemstone-item">
+                <img src="Images/SPINEL.jpg" alt="White Sapphire">
+                <h5><a href="#">Semi Precious Gemstones</a></h5>
+                <a href="#"><h3>Spinel</h3></a>
+            </div>
+
+            <div class="gemstone-item">
+                <img src="Images/AMETHYST.jpg" alt="PADPARADSCHA">
+                <h5><a href="#">Semi Precious Gemstones</a></h5>
+                <a href="#"><h3>Amethyst</h3></a>
+            </div>
+
+            <div class="gemstone-item">
+                <img src="Images/MOONSTONE.jpg" alt="Blue Sapphire">
+                <h5><a href="#">Semi Precious Gemstones</a></h5>
+                <a href="#"><h3>Moonstone</h3></a>
+            </div>
+
+            
+        </div>
     </section>
-
-
-
 
     <!--===Footer Section Start===-->
     <footer class="footer">
@@ -246,7 +313,7 @@
                 </div>
                 <div class="footer-col">
                     <div class="gia-img">
-                        <img src="/Web_Application_Final-_Project_Group-R/Images/cc1.png" alt="">
+                        <img src="/Images/cc1.png" alt="">
                         <p>We Provide NGJA Authorized Certificate with All Our Gemstones.
                             www.gemsinsrilanka.com Manage by ROYAL GEMSTONE PARADICE (PVT) LTD – Since 2024.</p>
                     </div>
